[package]
name = "wavefunctioncollapse"
version = "0.0.1"
edition = "2018"

[lib]
name = "wavefunctioncollapse"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.3.0"
default-features = false
features = ["python27-sys", "extension-module-2-7"]

[dependencies.rand]
version = "0.6"

[dependencies.wfc_image]
path = "../wfc-image"
version = "0.9"

[dependencies.image]
version = "0.21"

[dependencies.coord_2d]
version = "0.2"
