[package]
name = "wfc"
description = "Generate images using Wave Function Collapse"
version = "0.8.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/wfc.git"
repository = "https://github.com/stevebob/wfc.git"
documentation = "https://docs.rs/wfc"
edition = "2018"


[dependencies.rand]
version = "0.6"

[dependencies.hashbrown]
version = "0.1"

[dependencies.coord_2d]
version = "0.2"

[dependencies.grid_2d]
version = "0.12"

[dependencies.direction]
version = "0.17"

[lib]
name = "wavefunctioncollapse"
crate-type = ["cdylib"]
path = "src/python_module.rs"

[dependiencies.cpython]
version = "0.2"
features = ["extension-module"]